environment/dev/dev_jupyter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-jupyter-data-science
  labels:
    app: dev-jupyter-data-science
  namespace: dev-jupyter-data-science
spec:
  serviceAccountName: dev-jupyter-data-science-svc-acc
  containers:
    - name: dev-jupyter-data-science
      image: "docker.io/prasadgugulla/datascience:1.0.1"
      ports:
        - containerPort: 9003
