environment/dev/dev_jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-jupyter-data-science
  namespace: dev-jupyter-data-science
spec:
  selector:
    app: dev-jupyter-data-science
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
