environment/dev/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dev-jupyter-data-science
  namespace: dev-jupyter-data-science
  labels:
    app.kubernetes.io/instance: dev-jupyter-data-science
spec:
  host: >-
    dev-jupyter-data-science.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: dev-jupyter-data-science
    weight: 100
  port:
    targetPort: 9004
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGDjCCBPagAwIBAgISBJAJt00Ie3EAOSn+TUlMq/WQMA0GCSqGSIb3DQEBCwUA
[...]
      CHTd62qK26jLzG/H0HWtSkJD
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/      
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAySD/EBCYpQRgzZWfqvfK6/AwImyM7LxAwNzXIVDKiUD7ifT+
[...]
      FAXAk9pE6Z4jex+YX7Ka8i9lxOJgwEidyffxArFmTe/SxZXyYSXnyQ==
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: >-
         dev-jupyter-data-science.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: "True"
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
